# ragator-v2

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  chat_bot.py  pyproject.toml
.dvc/: config
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
apps/: chainlit_app.py  davia_app.py  rag_about_ragator.py  test_chainlit.py
data/configs/: ragator.yaml
data/llm_instructions/: document_reranking_instruction.yaml  question_classification_instruction.yaml  question_reformulation_instruction.yaml
data/rag_about_ragator/: .gitignore
data/rag_workflows/: simple_schema.yaml
data/ragator/: .gitignore  config.yaml
graphs/rag_about_ragator/: schema.yaml
graphs/rag_about_ragator/nodes/: classify_question.py  get_user_metadata.py  retrieve_documents.py
langgraph_rags/rag_about_ragator/: rag_state.py
langgraph_rags/rag_about_ragator/nodes/: get_static_answer.py
nodes/: generate_llm_answer.py  get_user_metadata.py  rerank_documents.py
rag_graphs/: draw_mermaid_from_schema.py  load_rag_workflow_from_schema.py  rag_graph_model.py
rag_graphs/rag_graph_schemas/: _base_schema.yaml
rag_graphs/ragator/: graph.py  models.py  params.py  paths.py  rag_graph.yaml  rag_graph_schema.yaml  rag_params.yaml
rag_graphs/ragator/nodes/: classify_question.py  generate_llm_answer.py  generate_llm_response.py  generate_llm_response_from_context.py  load_rag_params.py  retrieve_context.py  (+2 more)
scripts/: populate_qdrant_collection.py  update_mermaid_diagram_in_readme.py
scripts/populate_qdrant_collection/: dvc.yaml  params.yaml
scripts/populate_ragator_db/: dvc.yaml  params.yaml
scripts/populate_vector_store/: dvc.yaml  params.yaml
src/: graph_config.py  params.py  paths.py  utils.py
src/graph/: compile_rag_graph.py  create_rag_graph.py  models.py
src/retrieval/: chunk.py
src/utils/: dvc.py  httpx.py  importlib.py  io_manager.py  markdownify.py  urllib.py
src/workflow/: draw_mermaid_from_schema.py  load_rag_workflow_from_schema.py
state_graphs/: _base_state_graph.py
(+77 files in other folders)
