[project]
name = "ragator-v2"
version = "0.1.0"
description = ""
authors = [{ name = "Gabriel Guerin", email = "gabriel.guerin@theodo.com" }]
requires-python = "==3.11.*"
dependencies = [
    "chainlit>=2.4.400",
    "langchain>=0.3.23",
    "langfuse>=2.60.2",
    "langgraph>=0.3.27",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "qdrant-client>=1.13.3",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
branch = true
