[project]
name = "ragator-v2"
version = "0.1.0"
description = ""
authors = [{ name = "Gabriel Guerin", email = "gabriel.guerin@theodo.com" }]
requires-python = "==3.11.*"
dependencies = [
    "bs4>=0.0.2",
    "chainlit>=2.4.400",
    "dvc[gs]>=3.59.1",
    "fastparquet>=2024.11.0",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.13",
    "langfuse>=2.60.2",
    "langgraph>=0.3.27",
    "lxml-html-clean>=0.4.2",
    "markdownify>=1.1.0",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "qdrant-client>=1.13.3",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
branch = true
